
<resources>
    <string name="app_name">Mareu</string>
    <string name="Peach">Peach</string>
    <string name="Luigi">Luigi</string>
    <string name="Daisy">Daisy</string>
    <string name="Wario">Wario</string>
    <string name="Yoshi">Yoshi</string>
    <string name="Bowser">Bowser</string>
    <string name="Mario">Mario</string>
    <string name="Goomba">Goomba</string>
    <string name="MaReu">MaReu</string>
    <string name="date_filter">Trier par dates</string>
    <string name="hour_filter">Trier par heures</string>
    <string name="no_filter">Sans filtre</string>
    <string name="room_filter">Trier par salles</string>
</resources>