<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:id="@+id/checkbox_filter_mario"
            android:textSize="20dp"
            android:text="@string/Mario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_luigi"
            android:textSize="20dp"
            android:text="@string/Luigi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_peach"
            android:textSize="20dp"
            android:text="@string/Peach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_daisy"
            android:textSize="20dp"
            android:text="@string/Daisy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_wario"
            android:textSize="20dp"
            android:text="@string/Wario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_bowser"
            android:textSize="20dp"
            android:text="@string/Bowser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_yoshi"
            android:textSize="20dp"
            android:text="@string/Yoshi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_goomba"
            android:textSize="20dp"
            android:text="@string/Goomba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

    </LinearLayout>

</ScrollView>
